@@ -1,3 +1,11 @@
+2007-05-14 [colin]	0.4.0cvs1
+
+	* src/poppler_viewer.c
+		Add page switching when scrolling with the
+		mouse wheel. Also, change the gs call to
+		convert PS to PDF to match the one called
+		by ps2pdf.
+
 2007-04-16 [paul]	0.4.0
 
 	0.4.0 released
